2007-08-20  Emmanuele Bassi  <ebassi@gnome.org>

	* main.c: Initialise the counter before incrementing it, to
	avoid garbage and a segmentation fault. (#442846 and duplicates)

2007-08-17  Emmanuele Bassi  <ebassi@gnome.org>

	* main.c: Remove the useless "die" signal handler; return the
	correct type in the "save-yourself" signal handler.

2007-04-14  Jan Arne Petersen  <jap@gnome.org>

	* logrtns.c: (log_read_dates): Add check for i < n-1. (#364106)

2007-01-22  Emmanuele Bassi  <ebassi@gnome.org>

	* log_repaint.c: Fix message. (#399544, Stephane Raimbault)

2006-11-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* log_repaint.c: Check the return value of strrchr(). (should
	fix #380410 and duplicates)

2006-08-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* misc.c: Fix compilation on 64bit machines. (#352837,
	Laurent Goujon)

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	A gnome-system-log.desktop.in.in
	D gnome-system-log.desktop.in

	* Makefile.am:
	* gnome-system-log.desktop.in.in: Add Bugzilla version
	line and generate a template for l10n.

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* logview.h:
	* calendar.h:
	* loglist.h:
	* logrtns.c:
	* logview-findbar.c:
	* misc.c: Avoid crashing due to pointer truncation problems
	on 64-bit platforms (Joe Marcus Clarke, #339057).

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* log_repaint.c: Fix include of string.h.

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* userprefs.c: Add support for Solaris default log
	files (Lin Ma, #338426).

	* log_repaint.c: Remove NUL character returned by ctime
	from status bar (Lin Ma, #338426).

	* logview.c: Use File instead of Log (Lin Ma, #338426).

	* logrtns.c: Bold the whole log lines and get the corrent
	size in x86_64 and Sparc system (Lin Ma, #338426).

	* loglist.c: Sort files by ascending order (Lin Ma, #338426).

2006-05-28  Sebastien Bacher  <seb128@debian.org>

	* log_repaint.c: (tree_path_find_row): fix the selection offset 