@@ -1,3 +1,7 @@
+2007-08-23  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* logrtns.c: Fix a string leak. (#413498, Sebastien Bacher)
+
 2007-08-20  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* main.c: Initialise the counter before incrementing it, to
